Modify min-width for right rail to prevent viz from shifting it

--- a/src/devtools/views/left-rail/left-rail.css
+++ b/src/devtools/views/left-rail/left-rail.css
@@ -164,6 +164,6 @@
   position: absolute;
   right: 0;
   user-select: none;
-  width: 4px;
+  width: 5px;
   z-index: 2;
 }
